examples/istio/helidon-jpa/istio-gateway-vs.yaml
#
# Copyright (c) 2021 Oracle and/or its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helidon-jpa-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helidon-jpa-vs
spec:
  hosts:
    - "*"
  gateways:
    - helidon-jpa-gw
  http:
    - match:
        - uri:
            prefix: /greet
      route:
        - destination:
            host: helidon-jpa-service
            port:
              number: 8080
---
